added bootstrap and jquery

--- a/assets/scss/entry.scss
+++ b/assets/scss/entry.scss
@@ -1,4 +1,7 @@
+@import 'bootvars.scss';
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
 @import "helpers/helpers.scss";
+
 
 html, body {
   height: 100%;
