--- a/assets/scss/source-rtl.scss
+++ b/assets/scss/source-rtl.scss
@@ -1,3 +1,22 @@
 $dir: "rtl";
-
+@import 'bootvars.scss';
+// import all
+// @import '../bootstrap-rtl/scss/bootstrap.scss';
+// Required
+@import "../bootstrap-rtl/scss/functions";
+@import "../bootstrap-rtl/scss/variables";
+@import "../bootstrap-rtl/scss/mixins";
+  
+// Optional
+@import "../bootstrap-rtl/scss/reboot";
+@import "../bootstrap-rtl/scss/type";
+// @import "../../node_modules/bootstrap/scss/images";
+// @import "../../node_modules/bootstrap/scss/code";
+@import "../bootstrap-rtl/scss/grid";
+@import "../bootstrap-rtl/scss/dropdown";
+@import "../bootstrap-rtl/scss/nav";
+@import "../bootstrap-rtl/scss/navbar";
+@import "../bootstrap-rtl/scss/buttons";
+@import "../bootstrap-rtl/scss/utilities";
+@import "../bootstrap-rtl/scss/transitions";
 @import "entry.scss";
