--- a/assets/scss/helpers/helpers.scss
+++ b/assets/scss/helpers/helpers.scss
@@ -3,8 +3,6 @@
 section {
   position: relative;
   box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
 }
 
 .spacer {
@@ -25,10 +23,6 @@ section {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   min-height: 100%;
   width: 100%;
@@ -44,10 +38,6 @@ section {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 
@@ -58,24 +48,6 @@ section {
 
 .white {
   color: white;
-}
-
-.bg-curve {
-  min-width: 100%;
-  max-height: 100%;
-}
-
-.curve {
-  position: absolute;
-  width: 100%;
-  height: 100px;
-  overflow: hidden;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  @include media("<=mini-desktop") {
-    display: none;
-  }
 }
 
 .img-container {
@@ -149,9 +121,40 @@ section {
 }
 
 @mixin box-shadow($horizontal, $vertical, $blur, $spread, $color) {
-  -webkit-box-shadow: $horizontal $vertical $blur $spread $color;
-  -moz-box-shadow: $horizontal $vertical $blur $spread $color;
   box-shadow: $horizontal $vertical $blur $spread $color;
+}
+
+@mixin curve($position, $height, $hideAt: null, $inverse: null) {
+  .curve {
+    position: absolute;
+    width: 100%;
+    height: $height;
+    overflow: hidden;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    @include appDir(left, 0, right, 0);
+    @if $position == "top" {
+      top: #{-$height + 1px};
+    }
+    @if $position == "bottom" {
+      bottom: #{$height - 1px};
+    }
+    @if $hideAt {
+      @include media("<=" + $hideAt) {
+        display: none;
+      }
+    }
+    img {
+      min-width: 100%;
+      max-height: 100%;
+      @if $inverse {
+        @include appDir(transform, rotatey(180deg), transform, rotatey(0deg));
+      } @else {
+        @include appDir(transform, rotatey(0deg), transform, rotatey(180deg));
+      }
+    }
+  }
 }
 
 @import "form.scss";
