--- a/assets/bootstrap-rtl/scss/_tooltip.scss
+++ b/assets/bootstrap-rtl/scss/_tooltip.scss
@@ -7,7 +7,7 @@
   // Our parent element can be arbitrary since tooltips are by default inserted as a sibling of their target element.
   // So reset our font and text properties to avoid inheriting weird values.
   @include reset-text();
-  font-size: $tooltip-font-size;
+  @include font-size($tooltip-font-size);
   // Allow breaking very long words so they don't overflow the tooltip's bounds
   word-wrap: break-word;
   opacity: 0;
@@ -47,14 +47,14 @@
   padding: 0 $tooltip-arrow-height;
 
   .arrow {
-    left: 0 #{"/*!rtl:ignore*/"};
+    left: 0;
     width: $tooltip-arrow-height;
     height: $tooltip-arrow-width;
 
     &::before {
-      right: 0 #{"/*!rtl:ignore*/"};
-      border-width: ($tooltip-arrow-width / 2) $tooltip-arrow-height ($tooltip-arrow-width / 2) 0 #{"/*!rtl:ignore*/"};
-      border-right-color: $tooltip-arrow-color #{"/*!rtl:ignore*/"};
+      right: 0;
+      border-width: ($tooltip-arrow-width / 2) $tooltip-arrow-height ($tooltip-arrow-width / 2) 0;
+      border-right-color: $tooltip-arrow-color;
     }
   }
 }
@@ -77,14 +77,14 @@
   padding: 0 $tooltip-arrow-height;
 
   .arrow {
-    right: 0 #{"/*!rtl:ignore*/"};
+    right: 0;
     width: $tooltip-arrow-height;
     height: $tooltip-arrow-width;
 
     &::before {
-      left: 0 #{"/*!rtl:ignore*/"};
-      border-width: ($tooltip-arrow-width / 2) 0 ($tooltip-arrow-width / 2) $tooltip-arrow-height #{"/*!rtl:ignore*/"};
-      border-left-color: $tooltip-arrow-color #{"/*!rtl:ignore*/"};
+      left: 0;
+      border-width: ($tooltip-arrow-width / 2) 0 ($tooltip-arrow-width / 2) $tooltip-arrow-height;
+      border-left-color: $tooltip-arrow-color;
     }
   }
 }
