--- a/assets/bootstrap-rtl/scss/_alert-rtl.scss
+++ b/assets/bootstrap-rtl/scss/_alert-rtl.scss
@@ -27,13 +27,13 @@
 // Expand the right padding and account for the close button's positioning.
 
 .alert-dismissible {
-  padding-right: $close-font-size + $alert-padding-x * 2;
+  padding-left: $close-font-size + $alert-padding-x * 2;//rtl
 
   // Adjust close link position
   .close {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;//rtl
     padding: $alert-padding-y $alert-padding-x;
     color: inherit;
   }
