--- a/assets/bootstrap-rtl/scss/_carousel-rtl.scss
+++ b/assets/bootstrap-rtl/scss/_carousel-rtl.scss
@@ -29,9 +29,9 @@
 .carousel-item {
   position: relative;
   display: none;
-  float: left;
+  float: right; //rtl
   width: 100%;
-  margin-right: -100%;
+  margin-left: -100%; //rtl
   backface-visibility: hidden;
   @include transition($carousel-transition);
 }
@@ -44,12 +44,12 @@
 
 .carousel-item-next:not(.carousel-item-left),
 .active.carousel-item-right {
-  transform: translateX(100%);
+  transform: translateX(-100%); //rtl
 }
 
 .carousel-item-prev:not(.carousel-item-right),
 .active.carousel-item-left {
-  transform: translateX(-100%);
+  transform: translateX(100%); //rtl
 }
 
 
@@ -75,7 +75,7 @@
   .active.carousel-item-right {
     z-index: 0;
     opacity: 0;
-    @include transition(0s $carousel-transition-duration opacity);
+    @include transition(opacity 0s $carousel-transition-duration);
   }
 }
 
@@ -101,7 +101,7 @@
   @include transition($carousel-control-transition);
 
   // Hover/focus state
-  @include hover-focus {
+  @include hover-focus() {
     color: $carousel-control-color;
     text-decoration: none;
     outline: 0;
@@ -109,15 +109,15 @@
   }
 }
 .carousel-control-prev {
-  left: 0;
+  right: 0; //rtl
   @if $enable-gradients {
-    background: linear-gradient(90deg, rgba($black, .25), rgba($black, .001));
+    background-image: linear-gradient(-90deg, rgba($black, .25), rgba($black, .001)); //rtl
   }
 }
 .carousel-control-next {
-  right: 0;
+  left: 0; //rtl
   @if $enable-gradients {
-    background: linear-gradient(270deg, rgba($black, .25), rgba($black, .001));
+    background-image: linear-gradient(-270deg, rgba($black, .25), rgba($black, .001)); //rtl
   }
 }
 
@@ -127,14 +127,13 @@
   display: inline-block;
   width: $carousel-control-icon-width;
   height: $carousel-control-icon-width;
-  background: transparent no-repeat center center;
-  background-size: 100% 100%;
+  background: no-repeat 50% / 100% 100%;
 }
 .carousel-control-prev-icon {
-  background-image: $carousel-control-prev-icon-bg #{"/*!rtl:" + $carousel-control-next-icon-bg + "*/"};
+  background-image: escape-svg($carousel-control-prev-icon-bg);
 }
 .carousel-control-next-icon {
-  background-image: $carousel-control-next-icon-bg #{"/*!rtl:" + $carousel-control-prev-icon-bg + "*/"};
+  background-image: escape-svg($carousel-control-next-icon-bg);
 }
 
 
@@ -151,7 +150,7 @@
   z-index: 15;
   display: flex;
   justify-content: center;
-  padding-left: 0; // override <ol> default
+  padding-right: 0; // override <ol> default //rtl
   // Use the .carousel-control's width as margin so we don't overlay those
   margin-right: $carousel-control-width;
   margin-left: $carousel-control-width;
