--- a/assets/bootstrap-rtl/scss/_mixins-rtl.scss
+++ b/assets/bootstrap-rtl/scss/_mixins-rtl.scss
@@ -2,6 +2,12 @@
 //
 // Used in conjunction with global variables to enable certain theme features.
 
+// Vendor
+@import "vendor/rfs";
+
+// Deprecate
+@import "mixins/deprecate";
+
 // Utilities
 @import "mixins/breakpoints";
 @import "mixins/hover";
@@ -10,32 +16,32 @@
 @import "mixins/resize";
 @import "mixins/screen-reader";
 @import "mixins/size";
-@import "mixins/reset-text";
+@import "mixins/reset-text-rtl";
 @import "mixins/text-emphasis";
 @import "mixins/text-hide";
 @import "mixins/text-truncate";
 @import "mixins/visibility";
 
-// // Components
+// Components
 @import "mixins/alert";
 @import "mixins/buttons";
-@import "mixins/caret";
-@import "mixins/pagination";
-@import "mixins/lists";
+@import "mixins/caret-rtl";
+@import "mixins/pagination-rtl";
+@import "mixins/lists-rtl";
 @import "mixins/list-group";
 @import "mixins/nav-divider";
-@import "mixins/forms";
+@import "mixins/forms-rtl";
 @import "mixins/table-row";
 
-// // Skins
+// Skins
 @import "mixins/background-variant";
 @import "mixins/border-radius";
 @import "mixins/box-shadow";
 @import "mixins/gradients";
 @import "mixins/transition";
 
-// // Layout
+// Layout
 @import "mixins/clearfix";
 @import "mixins/grid-framework";
-@import "mixins/grid";
+@import "mixins/grid-rtl";
 @import "mixins/float";
