--- a/assets/bootstrap-rtl/scss/_pagination-rtl.scss
+++ b/assets/bootstrap-rtl/scss/_pagination-rtl.scss
@@ -8,7 +8,7 @@
   position: relative;
   display: block;
   padding: $pagination-padding-y $pagination-padding-x;
-  margin-left: -$pagination-border-width;
+  margin-right: -$pagination-border-width;//rtl
   line-height: $pagination-line-height;
   color: $pagination-color;
   background-color: $pagination-bg;
@@ -23,32 +23,27 @@
   }
 
   &:focus {
-    z-index: 2;
+    z-index: 3;
     outline: $pagination-focus-outline;
     box-shadow: $pagination-focus-box-shadow;
-  }
-
-  // Opinionated: add "hand" cursor to non-disabled .page-link elements
-  &:not(:disabled):not(.disabled) {
-    cursor: pointer;
   }
 }
 
 .page-item {
   &:first-child {
     .page-link {
-      margin-left: 0;
-      @include border-left-radius($border-radius);
+      margin-right: 0;//rtl
+      @include border-right-radius($border-radius);//rtl
     }
   }
   &:last-child {
     .page-link {
-      @include border-right-radius($border-radius);
+      @include border-left-radius($border-radius);//rtl
     }
   }
 
   &.active .page-link {
-    z-index: 1;
+    z-index: 3;
     color: $pagination-active-color;
     background-color: $pagination-active-bg;
     border-color: $pagination-active-border-color;
