--- a/assets/bootstrap-rtl/scss/_spinners-rtl.scss
+++ b/assets/bootstrap-rtl/scss/_spinners-rtl.scss
@@ -12,7 +12,8 @@
   height: $spinner-height;
   vertical-align: text-bottom;
   border: $spinner-border-width solid currentColor;
-  border-right-color: transparent;
+  border-left-color: transparent;//rtl
+  // stylelint-disable-next-line property-blacklist
   border-radius: 50%;
   animation: spinner-border .75s linear infinite;
 }
@@ -42,6 +43,7 @@
   height: $spinner-height;
   vertical-align: text-bottom;
   background-color: currentColor;
+  // stylelint-disable-next-line property-blacklist
   border-radius: 50%;
   opacity: 0;
   animation: spinner-grow .75s linear infinite;
