--- a/assets/bootstrap-rtl/scss/mixins/_forms-rtl.scss
+++ b/assets/bootstrap-rtl/scss/mixins/_forms-rtl.scss
@@ -77,10 +77,10 @@
       border-color: $color;
 
       @if $enable-validation-icons {
-        padding-right: $input-height-inner;
+        padding-left: $input-height-inner; //rtl
         background-image: escape-svg($icon);
         background-repeat: no-repeat;
-        background-position: right $input-height-inner-quarter center;
+        background-position: left $input-height-inner-quarter center; //rtl
         background-size: $input-height-inner-half $input-height-inner-half;
       }
 
@@ -95,8 +95,8 @@
   textarea.form-control {
     @include form-validation-state-selector($state) {
       @if $enable-validation-icons {
-        padding-right: $input-height-inner;
-        background-position: top $input-height-inner-quarter right $input-height-inner-quarter;
+        padding-left: $input-height-inner; //rtl
+        background-position: top $input-height-inner-quarter left $input-height-inner-quarter; //rtl
       }
     }
   }
@@ -106,7 +106,7 @@
       border-color: $color;
 
       @if $enable-validation-icons {
-        padding-right: $custom-select-feedback-icon-padding-right;
+        padding-left: $custom-select-feedback-icon-padding-left; //rtl
         background: $custom-select-background, escape-svg($icon) $custom-select-bg no-repeat $custom-select-feedback-icon-position / $custom-select-feedback-icon-size;
       }
 
