--- a/assets/bootstrap-rtl/scss/mixins/_grid-rtl.scss
+++ b/assets/bootstrap-rtl/scss/mixins/_grid-rtl.scss
@@ -53,7 +53,7 @@
 
 @mixin make-col-offset($size, $columns: $grid-columns) {
   $num: $size / $columns;
-  margin-left: if($num == 0, 0, percentage($num));
+  margin-right: if($num == 0, 0, percentage($num));//rtl
 }
 
 // Row columns
