--- a/assets/scss/entry.scss
+++ b/assets/scss/entry.scss
@@ -12,39 +12,23 @@ a {
 }
 
 p {
-  color: #7b7b7b;
-  line-height: 1.7;
+  line-height: 1.6;
   font-size: 1.2rem;
 }
 
 h1 {
-  color: #515151;
   font-size: 2.5rem;
   font-weight: 500;
   letter-spacing: 0.6px;
 }
 
-.container-fluid:not(.footer-container) {
+.container-fluid {
   max-width: 1600px;
 }
 
 h3 {
   font-weight: 400;
   font-size: 1.7rem;
-}
-
-body {
-  margin: 0;
-  background: transparent;
-  color: #515151;
-}
-@mixin theme-box-shadow($mode) {
-  @if $mode == "black" {
-    @include box-shadow(0, 0, 5px, 0, rgba(0,0,0,0.55));
-  }
-  @if $mode == "white" {
-    @include box-shadow(0, 0, 10px, 0, rgba(199, 199, 199, 1));
-  }
 }
 
 section {
@@ -55,3 +39,6 @@ section {
 .container-fluid {
   padding: 0 4vw;
 }
+
+@import 'templates/header.scss';
+@import 'templates/home.scss';
