--- a/assets/scss/source-rtl.scss
+++ b/assets/scss/source-rtl.scss
@@ -1,21 +1,25 @@
 $dir: "rtl";
 @import 'bootvars.scss';
+
+// change font
+// @import url('https://fonts.googleapis.com/css?family=Tajawal&display=swap');
+// $font-family-base: 'Tajawal', sans-serif;
+
+
 // import all
-// @import '../bootstrap-rtl/scss/bootstrap.scss';
+// @import '../bootstrap-rtl/scss/bootstrap-rtl.scss';
 // Required
 @import "../bootstrap-rtl/scss/functions";
-@import "../bootstrap-rtl/scss/variables";
-@import "../bootstrap-rtl/scss/mixins";
+@import "../bootstrap-rtl/scss/variables-rtl";
+@import "../bootstrap-rtl/scss/mixins-rtl";
   
 // Optional
-@import "../bootstrap-rtl/scss/reboot";
-@import "../bootstrap-rtl/scss/type";
-// @import "../../node_modules/bootstrap/scss/images";
-// @import "../../node_modules/bootstrap/scss/code";
+@import "../bootstrap-rtl/scss/reboot-rtl";
+@import "../bootstrap-rtl/scss/type-rtl";
 @import "../bootstrap-rtl/scss/grid";
-@import "../bootstrap-rtl/scss/dropdown";
-@import "../bootstrap-rtl/scss/nav";
-@import "../bootstrap-rtl/scss/navbar";
+@import "../bootstrap-rtl/scss/dropdown-rtl";
+@import "../bootstrap-rtl/scss/nav-rtl";
+@import "../bootstrap-rtl/scss/navbar-rtl";
 @import "../bootstrap-rtl/scss/buttons";
 @import "../bootstrap-rtl/scss/utilities";
 @import "../bootstrap-rtl/scss/transitions";
