--- a/assets/scss/source.scss
+++ b/assets/scss/source.scss
@@ -1,6 +1,10 @@
 $dir: 'ltr';
 @import 'bootvars.scss';
 
+// change font
+// @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+// $font-family-base: 'Lato', sans-serif;
+
 // import all
 // @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 // Required
@@ -10,8 +14,6 @@ $dir: 'ltr';
 // Optional
 @import "../../node_modules/bootstrap/scss/reboot";
 @import "../../node_modules/bootstrap/scss/type";
-// @import "../../node_modules/bootstrap/scss/images";
-// @import "../../node_modules/bootstrap/scss/code";
 @import "../../node_modules/bootstrap/scss/grid";
 @import "../../node_modules/bootstrap/scss/dropdown";
 @import "../../node_modules/bootstrap/scss/nav";
