--- a/assets/scss/entry.scss
+++ b/assets/scss/entry.scss
@@ -22,21 +22,17 @@ h1 {
   letter-spacing: 0.6px;
 }
 
-.container-fluid {
-  max-width: 1600px;
-}
-
 h3 {
   font-weight: 400;
   font-size: 1.7rem;
 }
 
 section {
-  padding: 30px 0;
+  padding: 50px 0;
   background-color: #ffffff;
 }
 
-.container-fluid {
+.container-fluid, .container {
   padding: 0 4vw;
 }
 
