--- a/assets/scss/helpers/form.scss
+++ b/assets/scss/helpers/form.scss
@@ -1,93 +1,125 @@
-$field-bg: #f0f6f6;
-$field-width: 100%;
-$field-height: 40px;
-$field-padding: 0 10px;
-$field-margin-between-rows: 15px;
-$ta-width: 100%;
-$ta-height: 120px;
-$field-border-radius: 10px;
-$field-border: transparent;
-$field-placeholder-color: #a7abac;
-$submit-bg: #0062a9;
-$submit-txt-color: white;
-$btns-width: 150px;
-$btns-height: inherit;
-$btns-txt-size: 16px;
+@mixin ninja-form-styles(
+  $field-bg: null,
+  $field-placeholder-color: null,
+  $field-width: null,
+  $field-height: null,
+  $field-padding: null,
+  $field-margin-between-rows: null,
+  $field-margin-between-cols: null,
+  $field-border-radius: null,
+  $field-border: null,
+  $ta-width: null,
+  $ta-height: null,
+  $submit-bg: null,
+  $submit-txt-color: null,
+  $btns-width: null,
+  $btns-height: null,
+  $btns-txt-size: null
+) {
+  $field-bg: #e3f4fb !default;
+  $field-placeholder-color: #79acbd !default;
+  $field-width: 100% !default;
+  $field-height: 50px !default;
+  $field-padding: 0 10px !default;
+  $field-margin-between-rows: 15px !default;
+  $field-margin-between-cols: 30px !default;
+  $field-border-radius: 10px !default;
+  $field-border: transparent !default;
+  $ta-width: 100% !default;
+  $ta-height: 120px !default;
+  $submit-bg: #ed1b24 !default;
+  $submit-txt-color: white !default;
+  $btns-width: 150px !default;
+  $btns-height: inherit !default;
+  $btns-txt-size: 16px !default;
 
-div.nf-form-cont {
-  position: relative;
-}
+  div.nf-form-cont {
+    position: relative;
+  }
 
-div.nf-form-cont *::placeholder,
-div.nf-form-cont select {
-  color: $field-placeholder-color !important;
-  opacity: 1;
-}
-div.nf-form-cont select option {
-  background-color: white;
-}
+  div.nf-form-cont *::placeholder,
+  div.nf-form-cont select {
+    color: $field-placeholder-color !important;
+    opacity: 1;
+  }
+  div.nf-form-cont select option {
+    background-color: white;
+  }
 
-div.nf-form-cont .nf-field-container {
-  margin-bottom: $field-margin-between-rows;
-}
+  div.nf-form-cont .nf-field-container {
+    margin-bottom: $field-margin-between-rows;
+  }
 
-div.nf-form-cont .nf-field-element input,
-div.nf-form-cont .nf-field-element textarea,
-div.nf-form-cont .nf-field-element select {
-  background-color: $field-bg !important;
-  border-radius: $field-border-radius;
-  border: $field-border;
-  width: $field-width;
-  height: $field-height !important;
-  padding: $field-padding;
-  -webkit-appearance: textfield !important;
-  -moz-appearance: textfield !important;
-  appearance: textfield !important;
-}
+  div.nf-form-cont .nf-field-element input,
+  div.nf-form-cont .nf-field-element textarea,
+  div.nf-form-cont .nf-field-element select {
+    background-color: $field-bg !important;
+    border-radius: $field-border-radius;
+    border: $field-border;
+    width: $field-width;
+    height: $field-height !important;
+    padding: $field-padding;
+    appearance: textfield !important;
+    -webkit-appearance: textfield !important;
+   -moz-appearance: textfield !important;
+  }
 
-div.nf-form-cont .nf-field-element textarea {
-  width: $ta-width;
-  height: $ta-height !important;
-}
-div.nf-form-cont .textarea-wrap .nf-field-element::after {
-  @include appDir(border-bottom-right-radius, 0!important, border-bottom-left-radius, 0!important);
-}
+  div.nf-form-cont .nf-field-element textarea {
+    width: $ta-width;
+    height: $ta-height !important;
+  }
+  div.nf-form-cont .textarea-wrap .nf-field-element::after {
+    @include appDir(border-bottom-right-radius, 0!important, border-bottom-left-radius, 0!important);
+  }
 
-div.nf-form-cont input[type="button"] {
-  background-color: $submit-bg !important;
-  color: $submit-txt-color;
-  width: $btns-width;
-  height: $btns-height;
-  font-size: $btns-txt-size;
-}
+  div.nf-form-cont input[type="button"] {
+    background-color: $submit-bg !important;
+    color: $submit-txt-color;
+    width: $btns-width;
+    height: $btns-height;
+    font-size: $btns-txt-size;
+  }
 
-.nf-error.field-wrap .nf-field-element:after {
-  @include appDir(border-top-right-radius, $field-border-radius, border-top-left-radius, $field-border-radius);
-  @include appDir(border-bottom-right-radius, $field-border-radius, border-bottom-left-radius, $field-border-radius);
-  height: $field-height !important;
-  width: $field-height !important;
-  line-height: $field-height !important;
-  top: 0 !important;
-  @include appDir(right, 0!important, left, 0!important);
-  @include appDir(display, inherit, right, unset!important);
-  z-index: 10;
-}
+  .nf-error.field-wrap .nf-field-element:after {
+    @include appDir(border-top-right-radius, $field-border-radius, border-top-left-radius, $field-border-radius);
+    @include appDir(border-bottom-right-radius, $field-border-radius, border-bottom-left-radius, $field-border-radius);
+    height: $field-height !important;
+    width: $field-height !important;
+    line-height: $field-height !important;
+    top: 0 !important;
+    @include appDir(right, 0!important, left, 0!important);
+    @include appDir(null, null, right, unset!important);
+    z-index: 10;
+  }
 
-.nf-pass.field-wrap .nf-field-element:after {
-  line-height: $field-height !important;
-  @include appDir(display, inherit, left, 16px);
-  @include appDir(font-weight, inherit, right, unset!important);
-}
+  .nf-pass.field-wrap .nf-field-element:after {
+    line-height: $field-height !important;
+    @include appDir(null, null, left, 16px);
+    @include appDir(null, null, right, unset!important);
+    z-index: 10;
+  }
 
-.nf-form-content .list-select-wrap .nf-field-element > div,
-.nf-form-content input:not([type="button"]),
-.nf-form-content textarea {
-  background: unset !important;
-  border: unset !important;
-  box-shadow: none !important;
-}
+  .nf-form-content .list-select-wrap .nf-field-element > div,
+  .nf-form-content input:not([type="button"]),
+  .nf-form-content textarea {
+    background: unset !important;
+    border: unset !important;
+    box-shadow: none !important;
+  }
 
-.nf-field-container.el-center {
+  .nf-field-container.el-center {
     display: flex;
     justify-content: center;
+  }
+
+  .nf-row {
+    .nf-cell {
+      &:first-of-type:not(:last-of-type) {
+        @include appDir(padding-right, $field-margin-between-cols / 2, padding-left, $field-margin-between-cols / 2);
+      }
+      &:last-of-type:not(:first-of-type) {
+        @include appDir(padding-left, $field-margin-between-cols / 2, padding-right, $field-margin-between-cols / 2);
+      }
+    }
+  }
 }
