--- a/assets/scss/helpers/helpers.scss
+++ b/assets/scss/helpers/helpers.scss
@@ -1,4 +1,5 @@
 @import "queries";
+@import "animations";
 
 section {
   position: relative;
@@ -160,5 +161,5 @@ section {
     }
   }
 }
-
+@import "loader.scss";
 @import "form.scss";
