--- a/assets/scss/entry.scss
+++ b/assets/scss/entry.scss
@@ -46,12 +46,6 @@ section {
   padding: 0 4vw;
 }
 
-.loader {
-  @include my-loader();
-}
-
-
-@import "templates/header.scss";
-@import "templates/home.scss";
-@import "templates/internal.scss";
-@import "templates/footer.scss";
+// .loader {
+//   @include my-loader();
+// }
