--- a/assets/css/main-rtl.css
+++ b/assets/css/main-rtl.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Tajawal&display=swap");
 *,
 *::before,
 *::after {
@@ -16,7 +15,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Tajawal", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -4482,6 +4481,35 @@ a.text-dark:hover, a.text-dark:focus {
     .collapsing {
       transition: none; } }
 
+@keyframes fadeOut {
+  0% {
+    opacity: 1; }
+  95% {
+    opacity: 0; }
+  100% {
+    z-index: -5; } }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1;
+    z-index: 60; } }
+
+@keyframes slideInUp {
+  from {
+    transform: translate3d(0, 30px, 0);
+    opacity: 0; }
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1; } }
+
+@keyframes slideOutDown {
+  from {
+    transform: translate3d(0, 0, 0); }
+  to {
+    transform: translate3d(0, 30px, 0); } }
+
 section {
   position: relative;
   box-sizing: border-box; }
@@ -4544,9 +4572,23 @@ section {
   width: 100%;
   height: 3px; }
 
-html, body {
+@keyframes ripple {
+  from {
+    opacity: 1;
+    transform: scale3d(0.75, 0.75, 1); }
+  to {
+    opacity: 0;
+    transform: scale3d(1.5, 1.5, 1); } }
+
+html,
+body {
   height: 100%;
   direction: rtl; }
+
+body.out {
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-name: slideOutDown; }
 
 a {
   text-decoration: none;
@@ -4567,7 +4609,11 @@ h3 {
 
 section {
   padding: 50px 0;
-  background-color: #ffffff; }
+  background-color: #ffffff;
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-name: slideInUp; }
 
-.container-fluid, .container-sm, .container-md, .container-lg, .container-xl, .container {
+.container-fluid, .container-sm, .container-md, .container-lg, .container-xl,
+.container {
   padding: 0 4vw; }
