--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
 *,
 *::before,
 *::after {
@@ -15,7 +14,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Lato", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -42,12 +41,10 @@ p {
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
   cursor: help;
   border-bottom: 0;
-  -webkit-text-decoration-skip-ink: none;
-          text-decoration-skip-ink: none; }
+  text-decoration-skip-ink: none; }
 
 address {
   margin-bottom: 1rem;
@@ -1583,10 +1580,7 @@ mark,
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
@@ -2810,7 +2804,6 @@ button.bg-dark:focus {
   position: fixed !important; }
 
 .position-sticky {
-  position: -webkit-sticky !important;
   position: sticky !important; }
 
 .fixed-top {
@@ -2827,9 +2820,8 @@ button.bg-dark:focus {
   left: 0;
   z-index: 1030; }
 
-@supports ((position: -webkit-sticky) or (position: sticky)) {
+@supports (position: sticky) {
   .sticky-top {
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1020; } }
@@ -4473,6 +4465,35 @@ a.text-dark:hover, a.text-dark:focus {
     .collapsing {
       transition: none; } }
 
+@keyframes fadeOut {
+  0% {
+    opacity: 1; }
+  95% {
+    opacity: 0; }
+  100% {
+    z-index: -5; } }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1;
+    z-index: 60; } }
+
+@keyframes slideInUp {
+  from {
+    transform: translate3d(0, 30px, 0);
+    opacity: 0; }
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1; } }
+
+@keyframes slideOutDown {
+  from {
+    transform: translate3d(0, 0, 0); }
+  to {
+    transform: translate3d(0, 30px, 0); } }
+
 section {
   position: relative;
   box-sizing: border-box; }
@@ -4499,8 +4520,7 @@ section {
   transform: translate(-50%, -50%);
   min-height: 100%;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover; }
+  object-fit: cover; }
 
 .bg-container {
   position: relative;
@@ -4536,9 +4556,23 @@ section {
   width: 100%;
   height: 3px; }
 
-html, body {
+@keyframes ripple {
+  from {
+    opacity: 1;
+    transform: scale3d(0.75, 0.75, 1); }
+  to {
+    opacity: 0;
+    transform: scale3d(1.5, 1.5, 1); } }
+
+html,
+body {
   height: 100%;
   direction: ltr; }
+
+body.out {
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-name: slideOutDown; }
 
 a {
   text-decoration: none;
@@ -4559,7 +4593,11 @@ h3 {
 
 section {
   padding: 50px 0;
-  background-color: #ffffff; }
+  background-color: #ffffff;
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-name: slideInUp; }
 
-.container-fluid, .container-sm, .container-md, .container-lg, .container-xl, .container {
+.container-fluid, .container-sm, .container-md, .container-lg, .container-xl,
+.container {
   padding: 0 4vw; }
