--- a/assets/scss/helpers/slider.scss
+++ b/assets/scss/helpers/slider.scss
@@ -19,8 +19,13 @@
         top: 0;
         @include appDir(left, 0, right, 0);
         height: $height - 30vh;
-        width: 60%;
         overflow: hidden;
+        @include media('>=mini-desktop') {
+          width: 60%;
+        };
+        @include media('<mini-desktop') {
+          width: 80%;
+        };
         .slide-content {
           position: absolute;
           z-index: 6;
@@ -35,7 +40,18 @@
             font-size: 1rem;
           }
           .slide-title {
-            font-size: 2.8vw;
+            @include media('>=mini-desktop') {
+              font-size: 2.8vw;
+            }
+            @include media('<mini-desktop', '>tablet') {
+              font-size: 2.2rem;
+            };
+            @include media('<=tablet', '>big-phone') {
+              font-size: 1.8rem;
+            }
+            @include media('<=big-phone') {
+              font-size: 1.5rem;
+            }
             color: white;
             font-weight: bold;
             margin: 10px 0 20px;
