--- a/src/scss/bootvars.scss
+++ b/src/scss/bootvars.scss
@@ -2,19 +2,20 @@ $container-max-widths: (
   sm: 540px,
   md: 720px,
   lg: 960px,
-  xl: 1400px
-) !default;
+  xl: 1500px
+);
 
 $h1-font-size: 2.3rem;
 $h3-font-size: 1.7rem;
-$primary: #ee9708;
+$primary: #f1612c;
 $secondary: #dbdbdb;
 $theme-colors: (
-  "header-1": #373737,
-  "card-title": #6a6a6a,
+  "sec-light": #f9f9f9,
+  "primary-dark": #88300c
 );
 
 $enable-shadows: true;
 $paragraph-margin-bottom: 0;
 $headings-margin-bottom: 0;
 $body-color: #6a6a6a;
+$headings-color: black;
