--- a/src/scss/bundle.scss
+++ b/src/scss/bundle.scss
@@ -1,9 +1,13 @@
 $dir: 'ltr';
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 @import 'bootvars.scss';
 
-// change font
-// @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
-// $font-family-base: 'Lato', sans-serif;
+
+// change fonts
+$headings-font-family: 'Nunito', sans-serif;
+$font-family-base: 'Open Sans', sans-serif;
 
 // import all
 // @import '../../node_modules/bootstrap/scss/bootstrap.scss';
