--- a/src/scss/bundle-rtl.scss
+++ b/src/scss/bundle-rtl.scss
@@ -23,4 +23,8 @@ $dir: "rtl";
 @import "./bootstrap-rtl/scss/buttons";
 @import "./bootstrap-rtl/scss/utilities";
 @import "./bootstrap-rtl/scss/transitions";
+@import "./bootstrap-rtl/scss/tables";
+@import "./bootstrap-rtl/scss/card-rtl";
+@import "./bootstrap-rtl/scss/root";
+
 @import "entry.scss";
