--- a/src/scss/bundle.scss
+++ b/src/scss/bundle.scss
@@ -25,4 +25,8 @@ $font-family-base: 'Open Sans', sans-serif;
 @import "../../node_modules/bootstrap/scss/buttons";
 @import "../../node_modules/bootstrap/scss/utilities";
 @import "../../node_modules/bootstrap/scss/transitions";
+@import "../../node_modules/bootstrap/scss/tables";
+@import "../../node_modules/bootstrap/scss/card";
+@import "../../node_modules/bootstrap/scss/root";
+
 @import "entry.scss";
