--- a/src/scss/helpers/queries.scss
+++ b/src/scss/helpers/queries.scss
@@ -3,9 +3,11 @@
 $breakpoints: (
   'phone': 320px,
   'big-phone': 420px,
+  'ninja-form-bb': 600px,
   'tablet': 768px,
   'mini-desktop': 960px,
   'desktop': 1024px,
+  'bootstrap-lg': 1200px,
   'hd': 1366px,
   'fhd': 1920px
 ) !default;
