--- a/src/scss/bootvars.scss
+++ b/src/scss/bootvars.scss
@@ -2,20 +2,21 @@ $container-max-widths: (
   sm: 540px,
   md: 720px,
   lg: 960px,
-  xl: 1500px
+  xl: 1400px
 );
 
-$h1-font-size: 2.3rem;
-$h3-font-size: 1.7rem;
 $primary: #f1612c;
-$secondary: #dbdbdb;
+$secondary: #484848;
 $theme-colors: (
   "sec-light": #f9f9f9,
-  "primary-dark": #88300c
+  "primary-dark": #88300c,
+  "cta-yellow": #fdc800
 );
 
 $enable-shadows: true;
 $paragraph-margin-bottom: 0;
-$headings-margin-bottom: 0;
-$body-color: #6a6a6a;
+$headings-margin-bottom: 15px;
+$headings-font-weight: 600;
+$font-size-base: 1rem;
+$body-color: #4e4e4e;
 $headings-color: black;
