--- a/src/scss/entry.scss
+++ b/src/scss/entry.scss
@@ -17,44 +17,69 @@ a {
   color: inherit;
 }
 
-p {
-  line-height: 1.6;
-  font-size: 1rem;
-}
-
-h1 {
-  font-size: 2.5rem;
-  font-weight: 500;
-  letter-spacing: 0.6px;
-}
-
-h3 {
-  font-weight: 400;
-  font-size: 1.7rem;
-}
-
 section {
   padding: 50px 0;
   background-color: #ffffff;
   animation-duration: 0.5s;
   animation-fill-mode: both;
   animation-name: slideInUp;
+  // &:first-of-type {
+  //   padding-top: 140px;
+  // }
 }
 
 .container-fluid,
 .container {
   padding: 0 4vw;
 }
-
-.loader {
-  @include my-loader();
+.container-fluid {
+  max-width: 1600px;
 }
 
-$slick-arrow-color: black;
-$slick-font-path: "../assets/fonts/";
-$slick-loader-path: "../assets/";
-@import "../../node_modules/slick-carousel/slick/slick.scss";
-@import "../../node_modules/slick-carousel/slick/slick-theme.scss";
+.slick-slide:focus {
+  outline: none;
+}
 
-@import "components/header.scss";
-@import "components/home.scss";
+.loader {
+  &.pending {
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+    animation-name: fadeIn;
+  }
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  display: flex;
+  z-index: 100;
+  justify-content: center;
+  background-color: #fafafa;
+  align-items: center;
+  top: 0;
+  left: 0;
+  .request-loader {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    img {
+      width: 50px;
+    }
+  }
+  &.done {
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+    animation-name: fadeOut;
+  }
+}
+
+div.pagination {
+  @include my-pagination();
+}
+
+// $slick-arrow-color: #a1a1a1;
+// $slick-font-path: "../assets/fonts/";
+// $slick-loader-path: "../assets/";
+// $slick-dot-size: 10px;
+// @import "../../node_modules/slick-carousel/slick/slick.scss";
+// @import "helpers/slick-theme.scss";
