--- a/src/scss/helpers/_animations.scss
+++ b/src/scss/helpers/_animations.scss
@@ -40,3 +40,21 @@
     transform: translate3d(0, 30px, 0);
   }
 }
+
+@keyframes navSlideUp {
+  from {
+    transform: translate3d(0, 0, 0);
+  }
+  to {
+    transform: translate3d(0, -200px, 0);
+  }
+}
+
+@keyframes navSlideDown {
+  from {
+    transform: translate3d(0, -200px, 0);
+  }
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
